# pde-solver

./: .gitignore  BURGERS_EQUATION_EXPLAINED.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_RUNNABLE_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOY_WEBSITE.md  Dockerfile  Dockerfile.cpu  FINAL_STATUS.md  GITHUB_DEPLOYMENT.md  INDUSTRY_STANDARDS.md  LICENSE  Makefile  PRODUCTION_FEATURES.md  PRODUCTION_SUMMARY.md  PROJECT_STRUCTURE.md  PYTORCH_WORKAROUND.md  QUICKSTART.md  QUICK_START.md  README.md  README_RUNNING.md  RUN.md  RUNNABLE_STATUS.txt  RUNNING_STATUS.md  RUN_RESULTS.md  SETUP_COMPLETE.md  START_HERE.md  START_HERE_FINAL.md  STATUS.md  WHAT_BURGERS_HELPS_US_DO.md  check_dependencies.py  docker-compose.prod.yml  docker-compose.yml  environment.yml  install_and_test.py  minimal_demo.py  pyproject.toml  requirements-prod.txt  (+8 more)
.github/workflows/: ci.yml
configs/: burgers_medium.yaml  burgers_small.yaml
examples/: README.md  burgers_demo.py
kubernetes/: deployment.yaml  job.yaml
monitoring/: prometheus.yml
pde_solver/: __init__.py  cli.py
pde_solver/api/: __init__.py  server.py  website.html
pde_solver/core/: __init__.py  adaptive_mesh.py  neural_symbolic_solver.py  physics_constraints.py
pde_solver/models/: __init__.py  burgers.py  classical_solvers.py  deeponet.py
pde_solver/symbolic/: __init__.py  symbolic_engine.py
pde_solver/training/: __init__.py  adaptive_sampling.py  multi_objective_loss.py  physics_informed_trainer.py
pde_solver/utils/: __init__.py  cache.py  config_validator.py  exceptions.py  logger.py  metrics.py  resource_manager.py  result_analysis.py  retry.py  security.py  visualization.py
scripts/: validate_structure.py
tests/: __init__.py  test_burgers.py  test_core.py  test_production.py
